--- a/frontend/src/app/features/amenities/amenities-choose-time-page/amenities-choose-time-page.component.html
+++ b/frontend/src/app/features/amenities/amenities-choose-time-page/amenities-choose-time-page.component.html
@@ -14,15 +14,21 @@
         <div *ngIf="!isLoading && bookings?.length === 0">
           <div class="f-c-c-c" style="text-align: center">
             <span class="w-75 mb-2">
-              {{ "AMENITIES-CHOOSE-TIME-PAGE.UNAVAILABLE_TIMES_FOR" | translate }}
+              {{
+                'AMENITIES-CHOOSE-TIME-PAGE.UNAVAILABLE_TIMES_FOR' | translate
+              }}
               <span class="font-weight-bolder c-primary">{{
                 amenityName
               }}</span>
-              {{ "AMENITIES-CHOOSE-TIME-PAGE.ON" | translate }} <span class="font-weight-bolder c-primary">{{ date }}</span
+              {{ 'AMENITIES-CHOOSE-TIME-PAGE.ON' | translate }}
+              <span class="font-weight-bolder c-primary">{{ date }}</span
               >.
             </span>
             <span class="w-75 mb-2 c-light-text">
-              {{ "AMENITIES-CHOOSE-TIME-PAGE.NO_SHIFTS_ARE_AVAILABLE_ON_THIS_DAY_PLEASE_CHECK_T" | translate }}
+              {{
+                'AMENITIES-CHOOSE-TIME-PAGE.NO_SHIFTS_ARE_AVAILABLE_ON_THIS_DAY_PLEASE_CHECK_T'
+                  | translate
+              }}
             </span>
           </div>
           <div class="col-md-12">
@@ -31,7 +37,7 @@
                 (click)="goBack()"
                 class="cool-button cool-small on-bg w-25 font-weight-bold"
               >
-              {{ "AMENITIES-CHOOSE-TIME-PAGE.GO_BACK" | translate }}
+                {{ 'AMENITIES-CHOOSE-TIME-PAGE.GO_BACK' | translate }}
               </button>
             </div>
           </div>
@@ -39,12 +45,17 @@
 
         <!-- If bookings are available -->
         <div *ngIf="!isLoading && bookings?.length > 0">
-          <h2>{{ "AMENITIES-CHOOSE-TIME-PAGE.SELECT_TIME_SLOTS" | translate }}</h2>
+          <h2>
+            {{ 'AMENITIES-CHOOSE-TIME-PAGE.SELECT_TIME_SLOTS' | translate }}
+          </h2>
           <p class="c-light-text mt-2">
-            <strong>{{ "AMENITIES-CHOOSE-TIME-PAGE.AMENITY" | translate }}</strong> {{ amenityName }}
+            <strong>{{
+              'AMENITIES-CHOOSE-TIME-PAGE.AMENITY' | translate
+            }}</strong>
+            {{ amenityName }}
           </p>
           <p class="c-light-text mt-2">
-            <strong>{{ "AMENITIES-CHOOSE-TIME-PAGE.DATE" | translate }}</strong>
+            <strong>{{ 'AMENITIES-CHOOSE-TIME-PAGE.DATE' | translate }}</strong>
             {{ date }}
           </p>
 
@@ -53,7 +64,7 @@
           <div class="f-c-c-c mt-4">
             <div class="shifts-reservation f-c-c-c w-50">
               <span class="font-weight-bold font-size-16">
-                {{ "AMENITIES-CHOOSE-TIME-PAGE.AVAILABLE_TIMES" | translate }}
+                {{ 'AMENITIES-CHOOSE-TIME-PAGE.AVAILABLE_TIMES' | translate }}
               </span>
 
               <form [formGroup]="shiftsForm" *ngIf="bookings?.length > 0">
@@ -74,9 +85,15 @@
             </div>
             <div class="f-c-c-c">
               <div class="f-c-c-c" style="gap: 5px">
-                {{ "AMENITIES-CHOOSE-TIME-PAGE.REMEMBER_THAT_YOU_CAN_SELECT_MULTIPLE_TIMES_AT_ONC" | translate }}
+                {{
+                  'AMENITIES-CHOOSE-TIME-PAGE.REMEMBER_THAT_YOU_CAN_SELECT_MULTIPLE_TIMES_AT_ONC'
+                    | translate
+                }}
                 <span class="c-primary font-weight-bolder">
-                  {{ "AMENITIES-CHOOSE-TIME-PAGE.PLEASE_CONFIRM_YOUR_SELECTION" | translate }}
+                  {{
+                    'AMENITIES-CHOOSE-TIME-PAGE.PLEASE_CONFIRM_YOUR_SELECTION'
+                      | translate
+                  }}
                 </span>
               </div>
             </div>
@@ -89,7 +106,9 @@
                   [disabled]="isReserveDisabled()"
                   style="height: 40px"
                 >
-                {{ "AMENITIES-CHOOSE-TIME-PAGE.CONFIRM_RESERVATION" | translate }}
+                  {{
+                    'AMENITIES-CHOOSE-TIME-PAGE.CONFIRM_RESERVATION' | translate
+                  }}
                 </button>
               </div>
             </div>
@@ -98,7 +117,9 @@
 
         <!-- Loading indicator -->
         <div *ngIf="isLoading" class="f-c-c-c" style="text-align: center">
-          <span class="w-100 mb-2">{{ "AMENITIES-CHOOSE-TIME-PAGE.LOADING_AVAILABLE_TIMES" | translate }}</span>
+          <span class="w-100 mb-2">{{
+            'AMENITIES-CHOOSE-TIME-PAGE.LOADING_AVAILABLE_TIMES' | translate
+          }}</span>
         </div>
       </div>
     </div>
@@ -115,38 +136,64 @@
 <!-- end container -->
 
 <!-- Success Popup -->
-<!-- Success Popup -->
 <div
   class="dialog"
   id="reservationDialog"
   [ngClass]="{ 'show-dialog': showReservationDialog }"
 >
-  <div class="dialog-content success-dialog">
+  <div class="dialog-content success-dialog" style="max-width: 400px">
     <div class="title mt-4 f-c-c-c">
       <div class="success-icon mb-2" style="font-size: 50px">
         <i class="fas fa-check-circle"></i>
       </div>
-      <span class="font-weight-bold">{{ "AMENITIES-CHOOSE-TIME-PAGE.RESERVATION_CONFIRMED" | translate }}</span>
+      <span class="font-weight-bold">{{
+        'AMENITIES-CHOOSE-TIME-PAGE.RESERVATION_CONFIRMED' | translate
+      }}</span>
     </div>
-    <div class="details text-center c-text">
+    <div class="details f-c-c-c c-text">
       <div class="divider mb-4"></div>
 
       <p>
-        <strong>{{ amenityName }}</strong> {{ "AMENITIES-CHOOSE-TIME-PAGE.HAS_BEEN_SUCCESSFULLY_RESERVED_FOR_YOU" | translate }}
+        <strong>{{ amenityName }}</strong>
+        {{
+          'AMENITIES-CHOOSE-TIME-PAGE.HAS_BEEN_SUCCESSFULLY_RESERVED_FOR_YOU'
+            | translate
+        }}
       </p>
-      <div class="divider mb-4 mt-4"></div>
-      <p><strong>{{ "AMENITIES-CHOOSE-TIME-PAGE.DATE" | translate }}</strong> {{ date }}</p>
-      <p>
-        <strong>{{ "AMENITIES-CHOOSE-TIME-PAGE.SHIFTS" | translate }}</strong>
-      </p>
-      <div class="shift-times" [innerHTML]="formattedShiftTimes"></div>
+      <div class="w-100 f-c-c-c g-0">
+        <div class="divider mb-4 mt-4"></div>
+        <p>
+          <strong>{{ 'AMENITIES-CHOOSE-TIME-PAGE.DATE' | translate }}</strong>
+          {{ date }}
+        </p>
+        <p>
+          <strong>{{ 'AMENITIES-CHOOSE-TIME-PAGE.SHIFTS' | translate }}</strong>
+        </p>
+      </div>
+
+      <table class="w-100">
+        <thead>
+          <tr>
+            <th>{{ 'AMENITIES-CHOOSE-TIME-PAGE.START_TIME' | translate }}</th>
+            <th>{{ 'AMENITIES-CHOOSE-TIME-PAGE.END_TIME' | translate }}</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let shift of selectedShiftTimes">
+            <td>{{ shift.start }}</td>
+            <td>{{ shift.end }}</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <button
       (click)="redirectToReservations()"
-      class="action-button success-button font-weight-bolder"
+      class="action-button success-button font-weight-bolder mb-3"
     >
-      <span>{{ "AMENITIES-CHOOSE-TIME-PAGE.GO_TO_AMENITIES" | translate }}</span>
+      <span>{{
+        'AMENITIES-CHOOSE-TIME-PAGE.GO_TO_AMENITIES' | translate
+      }}</span>
     </button>
   </div>
 </div>
