--- a/frontend/src/assets/styles/home.css
+++ b/frontend/src/assets/styles/home.css
@@ -594,6 +594,24 @@
   border-radius: 10px;
 }
 
+.preview-container {
+  position: relative;
+  display: inline-block;
+}
+
+.remove-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: #f44336; /* or your color */
+  color: white;
+  cursor: pointer;
+  padding: 2px 6px;
+  border-radius: 50%;
+  font-weight: bold;
+  transform: translate(50%, -50%);
+}
+
 .post-info {
   font-size: 16px;
   color: var(--lighttext);
