--- a/frontend/src/app/features/admin/admin-neighbors-requests-page/admin-neighbors-requests-page.component.html
+++ b/frontend/src/app/features/admin/admin-neighbors-requests-page/admin-neighbors-requests-page.component.html
@@ -10,7 +10,7 @@
 
   <div class="user-row" *ngIf="users.length === 0">
     <div class="information">
-      <!-- This is your fallback message -->
+      <!-- Fallback message -->
       <div>{{ "ADMIN-NEIGHBORS-REQUESTS-PAGE.NO_NEW_REQUESTS_FOUND" | translate }}</div>
     </div>
   </div>
