--- a/frontend/src/app/shared/components/infinite-scroll-select/infinite-scroll-select.component.scss
+++ b/frontend/src/app/shared/components/infinite-scroll-select/infinite-scroll-select.component.scss
@@ -66,14 +66,14 @@ $infinite-scroll-categories: (
       /* Always display the checkmark icon */
       &::after {
         content: "\f058"; /* Unicode for fa-check-circle */
-        font-family: "Font Awesome 5 Free"; /* Adjust if using a different version */
+        font-family: "Font Awesome 5 Free"; 
         font-weight: 400; /* 400 for regular (outline) */
         position: absolute;
         left: 10px;
         top: 50%;
         transform: translateY(-50%);
         color: var(--bordercolor);
-        font-size: 1.2em; /* Adjust size as needed */
+        font-size: 1.2em; 
         pointer-events: none; /* Ensures the icon doesn't interfere with click events */
       }
 
