translate remaining placeholders

--- a/frontend/src/app/features/admin/admin-create-announcement-page/admin-create-announcement-page.component.html
+++ b/frontend/src/app/features/admin/admin-create-announcement-page/admin-create-announcement-page.component.html
@@ -14,7 +14,7 @@
         <input
           formControlName="subject"
           class="cool-input"
-          placeholder="Subject"
+          [attr.placeholder]="'ADMIN-CREATE-ANNOUNCEMENT-PAGE.SUBJECT' | translate"
           type="text"
         />
         <app-form-error
@@ -30,7 +30,7 @@
           formControlName="message"
           class="cool-input textarea-min-max"
           rows="5"
-          placeholder="Message"
+          [attr.placeholder]="'ADMIN-CREATE-ANNOUNCEMENT-PAGE.MESSAGE' | translate"
         ></textarea>
         <app-form-error
           class="w-100"
