--- a/frontend/src/app/features/admin/admin-information-page/admin-information-page.component.html
+++ b/frontend/src/app/features/admin/admin-information-page/admin-information-page.component.html
@@ -138,7 +138,7 @@
           <input
             formControlName="contactName"
             class="cool-input"
-            placeholder="Contact Name"
+            [attr.placeholder]="'ADMIN-INFORMATION-PAGE.CONTACT_NAME' | translate"
             type="text"
           />
           <app-form-error
@@ -153,7 +153,7 @@
           <input
             formControlName="contactAddress"
             class="cool-input"
-            placeholder="Contact Address"
+            [attr.placeholder]="'ADMIN-INFORMATION-PAGE.CONTACT_ADDRESS' | translate"
             type="text"
           />
           <app-form-error
@@ -168,7 +168,7 @@
           <input
             formControlName="contactPhone"
             class="cool-input"
-            placeholder="Contact Phone"
+            [attr.placeholder]="'ADMIN-INFORMATION-PAGE.CONTACT_PHONE' | translate"
             type="text"
           />
           <app-form-error
@@ -220,7 +220,7 @@
           <input
             formControlName="title"
             class="cool-input"
-            placeholder="Title"
+            [attr.placeholder]="'ADMIN-INFORMATION-PAGE.TITLE' | translate"
             type="text"
           />
           <app-form-error
@@ -235,7 +235,7 @@
           <input
             formControlName="description"
             class="cool-input"
-            placeholder="Description"
+            [attr.placeholder]="'ADMIN-INFORMATION-PAGE.DESCRIPTION' | translate"
             type="text"
           />
           <app-form-error
