--- a/frontend/src/app/features/marketplace/marketplace-product-edit-page/marketplace-product-edit-page.component.html
+++ b/frontend/src/app/features/marketplace/marketplace-product-edit-page/marketplace-product-edit-page.component.html
@@ -35,7 +35,7 @@
                     formControlName="title"
                     type="text"
                     class="cool-input marketplace-input font-weight-bold"
-                    placeholder="Title"
+                    [attr.placeholder]="'MARKETPLACE-PRODUCT-EDIT-PAGE.TITLE' | translate"
                   />
                   <div
                     class="error pt-1"
@@ -53,7 +53,7 @@
                     formControlName="price"
                     type="text"
                     class="cool-input marketplace-input font-weight-bold font-size-14"
-                    placeholder="$1,000.00"
+                    [attr.placeholder]="'MARKETPLACE-PRODUCT-EDIT-PAGE.MONEY' | translate"
                     (keyup)="formatCurrency()"
                     (blur)="formatCurrency(true)"
                   />
@@ -140,7 +140,7 @@
                 formControlName="description"
                 class="cool-input marketplace-input textarea-min-max"
                 rows="5"
-                placeholder="Description"
+                [attr.placeholder]="'MARKETPLACE-PRODUCT-EDIT-PAGE.DESCRIPTION' | translate"
               ></textarea>
               <div
                 class="error pt-1"
