fix translation issue

--- a/frontend/src/app/features/admin/admin-create-announcement-page/admin-create-announcement-page.component.html
+++ b/frontend/src/app/features/admin/admin-create-announcement-page/admin-create-announcement-page.component.html
@@ -1,5 +1,5 @@
 <div class="cool-static-container">
-  <h2 class="card-title">Create an Announcement</h2>
+  <h2 class="card-title">{{ 'ADMIN-CREATE-ANNOUNCEMENT-PAGE.CREATE_AN_ANNOUNCEMENT' | translate }}</h2>
   <div class="divider mb-3 mt-3"></div>
 
   <!-- Announcement Form -->
