--- a/frontend/src/app/shared/components/wave-footer/wave-footer.component.html
+++ b/frontend/src/app/shared/components/wave-footer/wave-footer.component.html
@@ -26,8 +26,8 @@
   </svg>
   <div class="div-theme" [ngClass]="theme" style="height: 2em">
     <span class="h-100 container f-r-sb-c w-80 p-2">
-      <p>Your peace of mind is our priority. Safe, secure, and serene.</p>
-      <p>Contact us: +54 911 2328-6639 | info&#64;neibo.com</p>
+      <p>{{ "WAVE-FOOTER.SLOGAN" | translate }}</p>
+      <p>{{ "WAVE-FOOTER.CONTACT" | translate }}</p>
     </span>
   </div>
 </footer>
